Fix logo on small screens

--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,7 @@
 body > header {
 	.logo a {
+		white-space: nowrap;
+
 		img {
 			display: inline-block;
 		}
